# cliviz

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  PROGRESS.md  README.md  plan.md  pyproject.toml
.bedrock/: stack.yml
.cache/clangd/index/: cell.h.43EDBBDA18E064D8.idx  cell_test.cpp.1F7F04F93A043683.idx  color.cpp.1BDD51233F35A986.idx  color_test.cpp.4E4CC2E618F933AE.idx  diff_regression_test.cpp.5772ED736634C7A0.idx  fire.cpp.2D0EB4260B106986.idx  framebuf.cpp.3495AB6ABFA35CA0.idx  framebuf.h.9CC9381B5D77303F.idx  framebuf_test.cpp.034499AED5EF14AD.idx  integration_test.cpp.1A31F1B504F7D34A.idx  outbuf.h.2D8EDC5BB46E92C5.idx  outbuf_test.cpp.C1BE3EE8B748C1AD.idx  pipe.cpp.8A0BFAB540C38A3F.idx  pixbuf.cpp.78AC5952AAABC179.idx  pixbuf.h.44E6CCF00FB2BC81.idx  pixbuf_test.cpp.1797D02358188C00.idx  starfield.cpp.EE1C942ADCA723F2.idx  term.cpp.20C7B6E22C7F2B41.idx  term.h.A2AB17C4B3706CB0.idx  term_test.cpp.07EDC847CE6E47D9.idx
.claude/: init-prompt
csrc/examples/: debug_frame.cpp  demo.cpp  fire.cpp  pipe.cpp  starfield.cpp
csrc/include/cliviz/: framebuf.h  math3d.h  outbuf.h  pixbuf.h  threadpool.h
csrc/src/: color.cpp  framebuf.cpp  pixbuf.cpp  sdf.cpp  term.cpp  threadpool.cpp
csrc/tests/: CMakeLists.txt  cell_test.cpp  color_test.cpp  diff_regression_test.cpp  framebuf_test.cpp  integration_test.cpp  outbuf_test.cpp  pixbuf_test.cpp  threadpool_test.cpp
examples/: demo.cpp  minimal_test.cpp  minimal_test2.cpp
include/: cliviz.h
include/cliviz/: pixbuf.h
python/: pyproject.toml
python/cliviz/: __init__.py  _native.cpp  framepace.py
python/examples/: browser.py  browser_cdp.py  demoscene.py  game_of_life.py  plasma.py  platformer.py  sdf_demo.py  sdf_taichi.py  sdf_warp.py  spinning_cube.py
python/tests/: test_cliviz.py
src/: cell.h  cliviz_api.cpp  framebuf.cpp  framebuf.h  main.cpp  math3d.h  outbuf.h  pixbuf.cpp  pixbuf.h  raster.cpp  raster.h  sdf.cpp  sdf.h  term.cpp  term.h  threadpool.cpp  threadpool.h
tests/: CMakeLists.txt  capi_test.cpp  framebuf_test.cpp  math3d_test.cpp  outbuf_test.cpp  pixbuf_test.cpp  raster_test.cpp  sdf_test.cpp  smoke_test.cpp  term_test.cpp
