[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "cliviz"
version = "0.1.0"
description = "Terminal 3D rendering engine with half-block pixel display"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/cliviz"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
